# AndreaBozzo

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  LOCALIZATION.md  Makefile  README.md  ROADMAP.md  build.sh  eslint.config.mjs  go.mod  harvester  index.html  manifest.json  package-lock.json  package.json  pages-sitemap.xml  playwright.config.js  robots.txt  sitemap.xml  sw.js  vercel.ts
.github/scripts/: update_contributions.py
.github/workflows/: metrics.yml  pages.yml  scorecard.yml  update-contributions.yml  (+1 more)
assets/: hero-graph.js  main.js  main.min.js  styles.css  styles.min.css
blog/: hugo.github.toml  hugo.toml
cv/: andrea-bozzo-cv.html
docs/: Data Engineer Chronicles - Guida Implementazione Completa.md  Generatore Automatico GIF per Data Engineer Chronicles.md
it/: index.html
rust/site_engine/: Cargo.toml
rust/site_engine/src/: classify.rs  lib.rs  models.rs  query.rs  simulation.rs  tests.rs  utils.rs  workbench.rs
schema/: ci-runtimes.schema.json  contributions.schema.json  packages.schema.json  repo-metadata.schema.json  writing.schema.json
scripts/: apply-case-study-it-translations.py  assemble-site.sh  build-wasm.sh  check-css-tokens.mjs  check-json.mjs  doctor.mjs  generate-case-study-pages.mjs  generate-case-study-svgs.mjs  generate-contributions.mjs  generate-og-image.html  generate-og-images.mjs  generate-zerobus-assets.mjs  inject-system-anatomy.mjs  materialize-vercel-go-bootstraps.mjs  optimize-raster.mjs  run-go-workspace.mjs  serve-static.mjs  validate-data.mjs  validate-svg.mjs
tests/: case-studies-assets.spec.js  smoke.spec.js
(+146 files in other folders)
